@@ -59,3 +59,13 @@ Enemy {
 Trigger {
 	<see triggers_documentation>
 }
+
+// campaigns
+
+SavedCampaign {
+	version: 1,
+	custom: false,
+	type: 'campaign',
+	campaignName: string,
+	currentMap: string
+}
