@@ -30,3 +30,5 @@ v0.5.0
 * At least two pieces of equipment in base game
 * Ability to remove and equip equipment to characters
 * Minimal enemy AI
+* Campaign progression through completing maps
+* Get campaigns working completely
